Fixed header img on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -169,6 +169,9 @@ header {
 	img {
 		margin-top: 100px;
 		float:right;
+		@media screen and (max-width: 768px) { 
+			margin-top: 0px;
+		}
 	}
 }
 
